# ekimo-assignment

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: workflow.yaml
alembic/: env.py
alembic/versions/: 03649a43a904_init.py  16a0e153232a_add_field_to_product.py  3b0f5bdb482d_update_user_model_to_use_mapped_columns.py  6541a075300c_add_sync_field_to_product.py  81091c43fb01_change_barcode_to_biginteger.py  b8fa20479af1_introduce_products.py
src/core/: products.py  users.py
src/infra/: config.py
src/infra/fastapi/: auth.py  dependables.py  products.py  users.py
src/infra/models/: product.py  user.py
src/infra/repositories/: products.py  users.py
src/infra/services/: auth.py  product.py  sync.py
src/runner/: __main__.py  cli.py  config.py  setup.py
tests/: conftest.py  fake.py
tests/core/integration/: test_auth.py
tests/core/unit/: test_product.py
tests/e2e/: conftest.py  test_auth.py  test_product.py  test_user.py
tests/e2e/test_data/: products.csv  products.txt  products.xlsx
tests/integration/: test_auth.py  test_product.py  test_sync.py  test_user.py
tests/unit/: test_product.py  test_product_service.py  test_user.py
